--- a/src/Components/Footer/css/footer.css
+++ b/src/Components/Footer/css/footer.css
@@ -103,7 +103,7 @@ footer{
 
     footer >.d-flex{
         display: block !important;
-        padding: 0 25px;
+        padding: 40px 25px;
     }
     .explorer {
         width: 100%;
@@ -118,7 +118,7 @@ footer{
         font-size: 13px;
     }
     .our-offices {
-        width: 100%;
+        width: 100%;  
         margin-bottom: 10%;
     }
     .our-offices-head{
